fixes #8342 - disables form buttons on new container page in absence of docker compute resources

--- a/app/views/containers/steps/preliminary.html.erb
+++ b/app/views/containers/steps/preliminary.html.erb
@@ -12,6 +12,8 @@
         </div>
       <% end %>
     </div>
-    <%= render :partial => 'form_buttons' %>
+    <% if @container_resources.present? %>
+      <%= render :partial => 'form_buttons' %>
+    <% end %>
   <% end %>
 <% end %>
