--- a/app/views/containers/show.html.erb
+++ b/app/views/containers/show.html.erb
@@ -5,6 +5,7 @@
   <div class="col-md-4">
    <div id="myTabContent" class="tab-content">
       <div class="tab-pane active in">
+        <%= debug(@container.in_fog) %>
         <table id="properties_table" class="table table-bordered table-striped">
           <tr><th colspan="2"><%= _('Properties') %></th></tr>
             <tr>
